--- a/Number Guessing Game/README
+++ b/Number Guessing Game/README
@@ -1,1 +1,22 @@
 
+
+# Number Guessing Game
+
+ The program randomly select a number and the player have to guess the number.
+
+## Description
+
+The program give hints if the guess is high or low. Allow the user to specify the minimum and maximum values for the number range before the game starts. 
+This gives the player more control over the difficulty level. And the program have a feature that limits the number of guesses a player can make. 
+If the player runs out of attempts, the game end, and the correct number will be revealed.
+
+
+
+## Practice of:
+
+ - If-else condition
+ - Loop
+ - Using random library
+ 
+
+
