--- a/Number Guessing Game/README
+++ b/Number Guessing Game/README
@@ -12,7 +12,7 @@ If the player runs out of attempts, the game end, and the correct number will be
 
 
 
-!\[Guessing\_game\_img](https://github.com/user-attachments/assets/0937e20b-2ee9-4e4c-9cf5-5e34b8ce7243)
+<img width="812" height="358" alt="Image" src="https://github.com/user-attachments/assets/44902591-271c-4b19-af31-e2fb31f343f7" />
 
 
 
