--- a/Number Guessing Game/README
+++ b/Number Guessing Game/README
@@ -12,7 +12,7 @@ If the player runs out of attempts, the game end, and the correct number will be
 
 
 
-<img width="812" height="358" alt="Image" src="https://github.com/user-attachments/assets/44902591-271c-4b19-af31-e2fb31f343f7" />
+![image alt](https://github.com/KalinkaAleksandrova/Python/blob/571b23f343aa38745e3a887715a9c66c9ed4e338/Number%20Guessing%20Game/Screenshot%202025-11-17%20143236.jpg)
 
 
 
