--- a/Number Guessing Game/README
+++ b/Number Guessing Game/README
@@ -1,26 +1,14 @@
-
-# Number Guessing Game
-
+Number Guessing Game
 The program randomly select a number and the player have to guess the number.
 
 
-## Description
+Description
+The program give hints if the guess is high or low. Allow the user to specify the minimum and maximum values for the number range before the game starts. This gives the player more control over the difficulty level. And the program have a feature that limits the number of guesses a player can make. If the player runs out of attempts, the game end, and the correct number will be revealed.
 
-The program give hints if the guess is high or low. Allow the user to specify the minimum and maximum values for the number range before the game starts. 
-This gives the player more control over the difficulty level. And the program have a feature that limits the number of guesses a player can make. 
-If the player runs out of attempts, the game end, and the correct number will be revealed.
+![Guessing_game_img](https://github.com/user-attachments/assets/0937e20b-2ee9-4e4c-9cf5-5e34b8ce7243)
 
-
-
-![image alt] (https://github.com/KalinkaAleksandrova/Python/blob/571b23f343aa38745e3a887715a9c66c9ed4e338/Number%20Guessing%20Game/Screenshot%202025-11-17%20143236.jpg)
-
-
-
-## Practice of:
-
-* If-else condition
-* Loop
-* Using random library
-
-
+Practice of:
+⦁	If-else condition
+⦁	Loop
+⦁	Using random library
 
